fixed small layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+ 
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -34,3 +40,8 @@ body {
 .hide{
   display: none;
 }
+
+
+
+
+ 
